  - #2060, Fix "dimension" check violation by GetTopoGeomElementArray
  - #2051, Fix excess of precision in ST_AsGeoJSON output
  - #2052, Fix buffer overflow in lwgeom_to_geojson
  - #2033, Fix adding a splitting point into a 2.5d topology 
  - #2025, Fix side location conflict at TopoGeo_AddLineString 
  - #1987, Restore 1.5.x behaviour of ST_Simplify 
  - #1391, Errors during upgrade from 1.5
  - #1891, Use LDFLAGS environment when building liblwgeom
  - #1900, Fix pgsql2shp for big-endian systems 
  - #1932, Fix raster2pgsql for invalid syntax for setting index tablespace
  - #1936, ST_GeomFromGML on CurvePolygon causes server crash
  - #1955, ST_ModEdgeHeal and ST_NewEdgeHeal for doubly connected edges
  - #1957, ST_Distance to a one-point LineString returns NULL
  - #1976, Geography point-in-ring code overhauled for more reliability
  - #1978, wrong answer calculating length of closed circular arc (circle)
  - #1981, Remove unused but set variables as found with gcc 4.6+
  - #1989, Preprocess input geometry to just intersection with raster
           to be clipped
  - Update URL of Maven jar
  - #1996, support POINT EMPTY in GeoJSON output
  - #2019, ST_FlipCoordinates does not update bbox
  - #2026, improve performance of distance calculations
  - #2056, Fixed lack of SRID check of raster and geometry in ST_SetValue()
  - #2057, Fixed linking issue for raster2psql to libpq
  - #1581, ST_Clip(raster, ...) no longer imposes NODATA on a band if the
           corresponding band from the source raster did not have NODATA
  - #2072, Removed outdated checks preventing ST_Intersects(raster) from
           working on out-db bands
  - #2077, Fixed incorrect answers from ST_Hillshade(raster)
  - #2015, ST_IsEmpty('POLYGON(EMPTY)') returns False
  - #2100, ST_AsRaster() may not return raster with specified pixel type


 * Enhancements *

  - #2087, Speedup topology.GetRingEdges using a recursive CTE 